--- a/10-Master-Thesis/notebooks/01-Get-Twitter-Data.ipynb
+++ b/10-Master-Thesis/notebooks/01-Get-Twitter-Data.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3898fb2",
    "metadata": {},
    "source": [
     "# TFM Máster Data Science UAH 2020-2021\n",
@@ -19,7 +18,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da03274",
    "metadata": {},
    "source": [
     "### Extracción de Tweets"
@@ -27,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf12d3b",
    "metadata": {},
    "source": [
     "Importar librerías necesarias."
@@ -36,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c397d02d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4829c8",
    "metadata": {},
    "source": [
     "### Autenticación\n",
@@ -58,19 +53,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c62fe5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = \"8iHgnzLF03ppjZOLzXqL3X4m8\"\n",
-    "consumer_secret = \"SPQny26zvNM8IozX4xbh1xltvL4P4XpnApTLaLh78W4tvODLhX\"\n",
-    "access_token = \"552804541-OzXyQSRnTEjkzLiXVgDx5L0VvxGV9GadFxuMowsa\" \n",
-    "access_token_secret = \"OqFMeHJrP6ZTIv0R3405KQmzqWr8oUPfQLntOjiMQ5KFq\" "
+    "consumer_key = \"xxxxxxx\"\n",
+    "consumer_secret = \"xxxxxxx\"\n",
+    "access_token = \"xxxxxxx\" \n",
+    "access_token_secret = \"xxxxxxx\" "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "938795ba",
    "metadata": {},
    "source": [
     "Posteriormente se prepara la autenticación"
@@ -79,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "275fef76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ad74cd7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7beb71b",
    "metadata": {},
    "source": [
     "Se prepara el módulo api de twitter que permitirá la posterior extracción de dato. Se usarán los siguientes parámetros para la llamada:\n",
@@ -112,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "af12d778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d4983d6",
    "metadata": {},
    "source": [
     "### Establecer campo de búsqueda"
@@ -129,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb7e54b9",
    "metadata": {},
    "source": [
     "A continuación se especifica la palabra a buscar, el número de tweets y el lenguaje. En cuanto a los términos a usar para la búsqueda de tweets se van a seguir dos métodos de búsqueda para las 4 aerolíneas:\n",
@@ -142,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa69016",
    "metadata": {},
    "source": [
     "Los términos a buscar son:"
@@ -151,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "04a5feb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "afae45e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3779ef",
    "metadata": {},
    "source": [
     "### Extracción Final\n",
@@ -192,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "12e005d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +216,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80cae53",
    "metadata": {},
    "source": [
     "Una vez creada la función, se l¡genera un bucle que pasa por los diferentes términos a buscar y genera una archivo csv para cada uno de ellos."
@@ -243,7 +224,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e9a5937",
    "metadata": {},
    "outputs": [
     {
@@ -6483,7 +6463,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c922e5",
    "metadata": {},
    "source": [
     "### Referencias\n",
@@ -6498,7 +6477,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7cc1981",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6506,7 +6484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6520,7 +6498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
